Fixed layout issues and hooked up login page

--- a/css/discovery.css
+++ b/css/discovery.css
@@ -2,11 +2,6 @@ body {
     background-color: #E6ECF0;
 }
 
-h1 {
-    color: black;
-    margin-top: 10px;
-}
-
 h5 {
     margin-bottom: 50px;
 }
